# fitch-editor

./: .ghci  .gitignore  README.md  app.cabal  cabal.project  flake.nix  shell.nix  style.css
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 0s5bizxq6fw29gls8bhrwy89r4qvfxlh-source  3c9qli79y471cysky56k3dla7bfvxjvk-source  438lx5p04dy1w07a94qrw7y60qw4y92d-source  6y5yjyf2lm05mz1iiny15ilwpilaz47d-source  7l83agbrkbd4vws79bwzyn05g5ilxb8l-source  7r9781valfdppznwibl0p1c4s37636yz-source  89sj2pl4i4rrjw00rf3a3s8xqks12s9i-source  bql1pqpfh7aymxy4liyk90wxp1fl8d9x-source  cfdp2vm5qafl5nbljc06gzcq4x3j9z1k-source  dl106g8zagn1byq1719qdgzb6w7091av-source  dsy8g52xfzzsdip0ad6n5cy3pfd6f9m0-source  fn7b5vmk0ymlwi71za705q3lf3r7y7n8-source  iv96q7yh5r140h0lrhpqbgmh8mbn1y8j-source  kbg3l1mkl20wn2nh07hwxxh57afyld37-source  l8q8yz88hw2k151k5kszrzhz95ph8gil-source  lmrch32g1g117gi12155lyiyfivvz7ck-source  lra03rglyd64ygvyslq2sfn2f3qf3phm-source  mflr09bw18n9wh164m2s7mybc8v0jw45-source  nb7z9qpi236a1zqlq0d75ibbglgqpni5-source  nvs6jqgpczs1km8vm19m90hfmhpaywbk-source  q5lq35sgkixr5yy7f387240kcbnzi3vf-source  r0cagi8m69wr8pzvbkzw3443bynxzaa9-source  rciz2vh43a49q1zsl83gzr6p1h381n67-source  vs81blkwd3bbxcxasm0rgywn0k62aazy-source  w6j1vd017xhjd8wn7r775wcb05n1rb3l-source
app/: App.hs  Main.hs  Syntax.hs  Util.hs  Views.hs
assets/: style.css
static/: index.html  style.css
